# qrdecode

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: linux.cpp  main.cpp  platform.h  windows.cpp
